crates/compiler/test_syntax/tests/snapshots/pass/ability_demand_signature_is_multiline.expr.roc
Hash implements
  hash : a 
         -> U64

1
