crates/compiler/test_syntax/tests/snapshots/fail/ability_demands_not_indented_with_first.expr.roc
MEq implements
    eq : a, a -> U64 where a implements MEq
        neq : a, a -> U64 where a implements MEq

1
